--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,10 @@ buildscript {
     }
 }
 
+plugins {
+    id "org.jetbrains.kotlin.plugin.parcelize" version "1.4.21"
+}
+
 allprojects {
     repositories {
         google()
